[workspace]
members = ["mikrotik-proto", "mikrotik-tokio", "mikrotik-rs", "examples/*"]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["Alessandro Ferrara"]
keywords = ["mikrotik", "router", "api", "async", "tokio"]
license = "MIT OR Apache-2.0"
categories = ["api-bindings", "asynchronous", "network-programming"]
repository = "https://github.com/ferrohd/mikrotik-rs"

[workspace.dependencies]
# Core dependencies
tokio = "1.48.0"
thiserror = { version = "2.0", default-features = false }
uuid = { version = "1", default-features = false, features = ["v4"] }
hashbrown = "0.15"

# Internal crates
mikrotik-proto = { path = "mikrotik-proto" }
mikrotik-tokio = { path = "mikrotik-tokio" }

[workspace.lints.rust]
unsafe_code = "forbid"
