[package]
name = "mikrotik-embassy"
description = "Embassy async embedded client for MikroTik RouterOS API"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
doctest = false

[dependencies]
mikrotik-proto = { workspace = true }
embedded-io = "0.7"
embedded-io-async = "0.7"
embassy-sync = "0.8"
embassy-futures = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "net", "io-util"] }
embedded-io-adapters = { version = "0.7", features = ["tokio-1"] }
critical-section = { version = "1.1", features = ["std"] }
mikrotik-proto = { workspace = true }

[lints]
workspace = true
