[package]
name = "mikrotik-proto"
description = "Sans-IO protocol implementation for MikroTik RouterOS API"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]

[features]
std = []

[dependencies]
thiserror = { workspace = true }
uuid = { workspace = true }
hashbrown = { workspace = true }

[dev-dependencies]
proptest = "1"

[lints]
workspace = true
