[package]
name = "mikrotik-rs"
version = "0.7.0"
description = "Asynchronous Rust library for interfacing with MikroTik routers"
edition.workspace = true
authors.workspace = true
keywords.workspace = true
license.workspace = true
categories.workspace = true
repository.workspace = true
readme = "../README.md"
publish = true

[lib]
doctest = false

[lints]
workspace = true

[features]
default = ["tokio"]
tokio = ["dep:mikrotik-tokio"]
embassy = ["dep:mikrotik-embassy"]

[dependencies]
mikrotik-proto = { workspace = true }
mikrotik-tokio = { workspace = true, optional = true }
mikrotik-embassy = { workspace = true, optional = true }
