[package]
name = "mikrotik-tokio"
description = "Tokio-based async client for MikroTik RouterOS API"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
doctest = false

[features]
tokio-tls = ["dep:tokio-rustls", "dep:rustls"]

[dependencies]
mikrotik-proto = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["net", "sync", "rt", "macros", "io-util"] }
thiserror = { workspace = true }
tokio-rustls = { version = "0.26", default-features = false, features = ["tls12"], optional = true }
rustls = { version = "0.23", default-features = false, features = ["std"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["net", "sync", "rt", "macros", "io-util", "rt-multi-thread"] }

[lints]
workspace = true
