[package]
name = "macro-example"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
keywords.workspace = true
license.workspace = true
categories.workspace = true
repository.workspace = true

[dependencies]
mikrotik-rs = {package = "mikrotik-rs",  path = "../../mikrotik-rs" }

[lints]
workspace = true
