[package]
name = "network-monitor"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
keywords.workspace = true
license.workspace = true
categories.workspace = true
repository.workspace = true
publish = false

[dependencies]
mikrotik-rs = {package = "mikrotik-rs",  path = "../../mikrotik-rs" }
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
